--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -12,4 +12,4 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: flyctl secrets set FLY_API_TOKEN=${{ secrets.BOT_API_TOKEN}} && flyctl deploy --remote-only
+        - run: flyctl secrets set BOT_API_TOKEN=${{ secrets.BOT_API_TOKEN}} && flyctl deploy --remote-only
